@@ -32,7 +32,7 @@
 
 #define MAX_DLIGHTS     32      // can't be increased, because bit flags are used on surfaces
 
-#define REFENTITYNUM_BITS   11      // can't be increased without changing drawsurf bit packing
+#define REFENTITYNUM_BITS   16      // can't be increased without changing drawsurf bit packing
 #define REFENTITYNUM_MASK   ((1<<REFENTITYNUM_BITS) - 1)
 // the last N-bit number (2^REFENTITYNUM_BITS - 1) is reserved for the special world refentity,
 //  and this is reflected by the value of MAX_REFENTITIES (which therefore is not a power-of-2)
